# spotify_about_me

./: .env  Cargo.toml  README.md
src/: about_me.html  grab.rs  index.css  main.rs  template.html  template2.html
