[package]
name = "spotify_about_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.17"
tokio = { version = "1.28.1", features = ["full"] } 
rspotify = { version = "0.11.7", features = ["cli","client-ureq","env-file","ureq-rustls-tls"], default-features = false}
minijinja = "0.32.1"
